--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     :root{
       --bg:#ffffff;
       --bubble: 255 182 213;
-      --pink1:#ff6fb7;
-      --pink2:#ffb7e8;
-      --pink3:#ff8fd8;
+      --pink1:#6feeff;
+      --pink2:#9af3ff;
+      --pink3:#c8f9ff;
     }
 
     *{box-sizing:border-box}
@@ -155,7 +155,7 @@
     .icon:hover img{ animation: spinOnce .55s linear 1; }
 
     .icon:focus-visible{
-      outline: 4px solid rgba(255, 182, 213, .75);
+      outline: 4px solid rgba(144, 242, 255, 0.75);
       outline-offset: 5px;
     }
 
