--- a/index.html
+++ b/index.html
@@ -10,8 +10,28 @@
 *{box-sizing:border-box}
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:var(--bg);font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text)}
 .container{width:100%;max-width:520px;padding:50px 30px;background:var(--card);border:1px solid var(--border);text-align:center}
-h1{margin:0;font-size:32px;font-weight:600;letter-spacing:-.5px}
-.pronouns{margin-top:6px;color:var(--muted);font-size:15px}
+h1{
+margin:0;
+font-size:32px;
+font-weight:600;
+letter-spacing:-.5px;
+background:linear-gradient(90deg,#ff77c8,#ffffff,#ff77c8);
+background-size:200% 200%;
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
+animation:gradientShift 4s ease infinite, glowPulse 3s ease-in-out infinite;
+}
+@keyframes gradientShift{
+0%{background-position:0% 50%}
+50%{background-position:100% 50%}
+100%{background-position:0% 50%}
+}
+@keyframes glowPulse{
+0%{text-shadow:0 0 6px rgba(255,119,200,0.4)}
+50%{text-shadow:0 0 14px rgba(255,119,200,0.8)}
+100%{text-shadow:0 0 6px rgba(255,119,200,0.4)}
+}
+.pronouns{margin-top:8px;color:var(--muted);font-size:15px}
 .links{margin-top:40px;display:flex;flex-direction:column;gap:14px}
 a{text-decoration:none;color:var(--text);padding:14px 18px;border:1px solid var(--border);background:#0e0e0e;display:flex;justify-content:space-between;align-items:center;transition:.15s}
 a:hover{background:var(--hover)}
@@ -19,7 +39,8 @@ a:hover{background:var(--hover)}
 .left i{width:18px;text-align:center;opacity:.85;font-size:16px}
 .arrow{opacity:.5;transition:.15s}
 a:hover .arrow{transform:translateX(4px);opacity:1}
-footer{margin-top:40px;font-size:12px;color:#666}
+.footer-img{margin-top:40px}
+.footer-img img{max-width:320px;height:auto}
 </style>
 </head>
 <body>
@@ -40,10 +61,9 @@ footer{margin-top:40px;font-size:12px;color:#666}
 <span class="arrow">→</span>
 </a>
 </div>
-<footer>© <span id="year"></span></footer>
+<div class="footer-img">
+<img src="hi.gif" alt="hi">
 </div>
-<script>
-document.getElementById("year").textContent=new Date().getFullYear()
-</script>
+</div>
 </body>
 </html>
